# predmarket_scanner

./: .gitignore  CLI.md  Cargo.toml  FEATURES.md  GO_CONVERSION_SUMMARY.md  IMPLEMENTATION.md  Makefile  PLAN.md  README.md  README_GO.md  STRATEGY_AND_BACKTESTING_PLAN.md  go.mod  go.sum  strategies.md
DOCS/: DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_0.md  STRATEGIES.md
cmd/: commands.go  main.go  websocket_scan.go
internal/fees/: fees.go
internal/scoring/: scoring.go
pkg/clients/: polymarket.go  slippage.go
pkg/database/: sqlite.go
pkg/output/: output.go
pkg/providers/: dataprovider.go  jsonl_provider.go  parquet_provider.go  parquet_provider_test.go
pkg/storage/: jsonl_logger.go  parquet_converter.go
pkg/strategies/: dutch_book.go  multi_outcome.go
pkg/types/: market.go  orderbook.go  orderbook_test.go  timeutils.go  websocket.go
pkg/websocket/: client.go
src/: fees.rs  main.rs  scoring.rs
src/clients/: mod.rs  polymarket.rs
src/output/: json_csv.rs  mod.rs  terminal.rs
src/strategies/: dutch_book.rs  mod.rs
src/types/: market.rs
